--- a/client/chrome/skin/linux/personas.css
+++ b/client/chrome/skin/linux/personas.css
@@ -35,6 +35,7 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
+
 /******************************************************************************/
 /* Personas Selector Menu & Toolbar Button */
 
@@ -66,6 +67,7 @@
   opacity: 0.8;
 }
 
+
 /* Note: we don't have to eliminate top/bottom borders from toolbars on Linux,
  * as they go away by themselves when we set -moz-appearance: none on toolbars.
  * Nor do we have to compensate for the lack of borders to prevent jumping
@@ -73,3 +75,44 @@
  * retain the same height, probably because the default theme specifies
  * top and bottom padding that applies when -moz-appearance: none and which is
  * the exact same height as the borders with -moz-appearance: toolbar. */
+
+
+/******************************************************************************/
+/* Eliminate top/bottom borders from statusbars so they don't mar the persona. */
+
+/* IMPORTANT: these rules are very carefully devised to remove or hide borders
+ * without changing the overall height of the bottom chrome, so content doesn't
+ * jump up or down when the user switches from the default theme to a persona.
+ * So when changing these rules, be very careful that you don't inadvertently
+ * change the overall height of the toolbar. */
+
+#browser-bottombox[persona] #status-bar {
+  border-left: none;
+  border-bottom: none;
+  border-right: none;
+}
+
+#browser-bottombox[persona] #FindToolbar {
+  border-top-width: 1px;
+  border-top-color: transparent;
+  -moz-border-top-colors: transparent !important;
+}
+
+/**
+ * The statusbarpanel element that sits inside the statusbar element defines
+ * its own background color and border, so we have to turn them off separately.
+ */
+#browser-bottombox[persona] statusbarpanel {
+  -moz-appearance: none; /* undo -moz-appearance: statusbarpanel */
+
+  /* These rules prevent horizontal jumping, as -moz-appearance: statusbarpanel
+   * apparently creates hidden left-right (or perhaps there's margin or padding;
+   * there's no way to know with -moz-appearance because Gecko doesn't expose
+   * the results of applying OS-specific style via that rule). */
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+
+  /* These rules prevent top-bottom jumping. */
+  border-bottom: 2px solid transparent;
+  border-top: 2px solid transparent;
+}
